Menampilkan peta secara langsung dengan 'Modal'

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>Sehat Yuk SPA</title>
     <link rel="shortcut icon" type="image/png" href="./dist/fav.png"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY_MAPS&libraries=places"></script>
   </head>
   <body>
     <div id="app"></div>
